SERVER-10567 Handling rsHealthPoll/PRIMARY stepdown race